--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="css/style.css" rel="stylesheet" />
+    <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <title>React App</title>
   </head>
